# bet_maker

./: .env  .python-version  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
crud/: bet_dal.py  event_dal.py
database/: __init__.py  base.py  db_helper.py  models.py
migrations/: env.py
migrations/versions/: 90bc824cf052_create_tables.py
routes/: bets.py  events.py
schemas/: bet.py  bet_status.py  event.py  event_status.py  pagination.py
src/: .env  alembic.ini  config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 02e8564094f9_name.py
src/database/: models.py  session.py
src/routes/: bets.py
tests/: client.py  conftest.py  test_bets.py
